--- a/style.css
+++ b/style.css
@@ -613,3 +613,20 @@ body {
     color: #cc0000;
     font-weight: 700;
 }
+
+
+/* ========================================
+MENTIONS LEGALES PAGE
+   ======================================== */
+
+.mentions_legales {
+    text-align: center;
+    margin-top: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+
+
+.BR{
+    margin-bottom: 20px;
+}
